--- a/IP9212_switch2/app.config
+++ b/IP9212_switch2/app.config
@@ -2,7 +2,27 @@
 <configuration>
     <configSections>
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="ASCOM.IP9212.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
             <section name="ASCOM.DeviceName.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
         </sectionGroup>
     </configSections>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup><applicationSettings>
+        <ASCOM.IP9212.Properties.Settings>
+            <setting name="ipaddr" serializeAs="String">
+                <value>192.168.1.90</value>
+            </setting>
+            <setting name="ipport" serializeAs="String">
+                <value>80</value>
+            </setting>
+            <setting name="iplogin" serializeAs="String">
+                <value>admin</value>
+            </setting>
+            <setting name="ippass" serializeAs="String">
+                <value>12345678</value>
+            </setting>
+            <setting name="trace" serializeAs="String">
+                <value>True</value>
+            </setting>
+        </ASCOM.IP9212.Properties.Settings>
+    </applicationSettings>
+</configuration>
