--- a/IP9212_switch2/IP9212_switch2.csproj
+++ b/IP9212_switch2/IP9212_switch2.csproj
@@ -130,6 +130,9 @@
       <DependentUpon>SetupDialogForm.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="SetupDialogForm.ru.resx">
+      <DependentUpon>SetupDialogForm.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <Content Include="ChangeLog.txt" />
