--- a/IP9212_switch2/Properties/Settings.settings
+++ b/IP9212_switch2/Properties/Settings.settings
@@ -20,5 +20,8 @@
     <Setting Name="CheckCacheTimeout" Type="System.String" Scope="User">
       <Value Profile="(Default)">20</Value>
     </Setting>
+    <Setting Name="Language" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
