--- a/IP9212_switch2/app.config
+++ b/IP9212_switch2/app.config
@@ -45,6 +45,9 @@
       <setting name="CheckCacheTimeout" serializeAs="String">
         <value>20</value>
       </setting>
+      <setting name="Language" serializeAs="String">
+        <value />
+      </setting>
     </ASCOM.IP9212.Properties.Settings>
   </userSettings>
 </configuration>
