--- a/IP9212_switch2/app.config
+++ b/IP9212_switch2/app.config
@@ -48,6 +48,9 @@
       <setting name="Language" serializeAs="String">
         <value />
       </setting>
+      <setting name="ReadCacheTimeout" serializeAs="String">
+        <value>4</value>
+      </setting>
     </ASCOM.IP9212.Properties.Settings>
   </userSettings>
 </configuration>
