--- a/IP9212_switch2/Properties/Settings.settings
+++ b/IP9212_switch2/Properties/Settings.settings
@@ -23,5 +23,8 @@
     <Setting Name="Language" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="ReadCacheTimeout" Type="System.String" Scope="User">
+      <Value Profile="(Default)">4</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
