--- a/IP9212_switch2/Properties/Settings.settings
+++ b/IP9212_switch2/Properties/Settings.settings
@@ -1,5 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="ASCOM.IP9212.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="ASCOM.IP9212_v2.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="ipaddr" Type="System.String" Scope="User">
@@ -25,6 +25,9 @@
     </Setting>
     <Setting Name="ReadCacheTimeout" Type="System.String" Scope="User">
       <Value Profile="(Default)">4</Value>
+    </Setting>
+    <Setting Name="Network_timeout" Type="System.String" Scope="User">
+      <Value Profile="(Default)">5</Value>
     </Setting>
   </Settings>
 </SettingsFile>
