--- a/IP9212_switch2/app.config
+++ b/IP9212_switch2/app.config
@@ -5,6 +5,7 @@
             <section name="ASCOM.DeviceName.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
         </sectionGroup>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="ASCOM.IP9212_v2.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="ASCOM.IP9212.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
@@ -22,6 +23,35 @@
     </assemblyBinding>
   </runtime>
   <userSettings>
+    <ASCOM.IP9212_v2.Properties.Settings>
+      <setting name="ipaddr" serializeAs="String">
+        <value>192.168.1.90</value>
+      </setting>
+      <setting name="ipport" serializeAs="String">
+        <value>80</value>
+      </setting>
+      <setting name="iplogin" serializeAs="String">
+        <value>admin</value>
+      </setting>
+      <setting name="ippass" serializeAs="String">
+        <value>12345678</value>
+      </setting>
+      <setting name="trace" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="CheckCacheTimeout" serializeAs="String">
+        <value>20</value>
+      </setting>
+      <setting name="Language" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="ReadCacheTimeout" serializeAs="String">
+        <value>4</value>
+      </setting>
+      <setting name="Network_timeout" serializeAs="String">
+        <value>5</value>
+      </setting>
+    </ASCOM.IP9212_v2.Properties.Settings>
     <ASCOM.IP9212.Properties.Settings>
       <setting name="ipaddr" serializeAs="String">
         <value>192.168.1.90</value>
